<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_gravity="start"
        android:layout_marginStart="1dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/back_button"
        app:srcCompat="@drawable/back_button" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/main_logo" />

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/First_Name"
            android:layout_marginTop="24dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="e.g. John"
            android:background="@color/primaryButtonColor"
            android:hint="@string/FirstName"
            android:padding="10dp"
            android:textColorHint="@color/grey" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LastName_label"
            android:layout_marginTop="24dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/primaryButtonColor"
            android:hint="@string/e_g_doe"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="@color/grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="24dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryButtonColor"
            android:hint="@string/emaiHint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="@color/grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:layout_marginTop="24dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your Password"
            android:textColorHint="@color/grey"
            android:background="@color/primaryButtonColor"
            android:inputType="textPassword"
            android:layout_marginBottom="24dp"
            android:padding="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="320dp"
            android:layout_height="38dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="#917EB0"
            android:text="Sign up" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">
        <View
            android:id="@+id/divider"
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:layout_weight="0.3"
            android:background="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="0.3"
            android:textAlignment="center"
            android:text="or"

            android:textColor="@android:color/black"
            android:textSize="16sp" />
        <View
            android:id="@+id/divider2"
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:layout_weight="0.3"
            android:background="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="24dp">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:background="@color/white"
            android:contentDescription="@string/google_signup"
            app:srcCompat="@drawable/google_icon" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="50dp"
            android:background="@color/white"
            android:contentDescription="@string/fb_signup"
            app:srcCompat="@drawable/fb_icon" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/apple_signup"
            app:srcCompat="@drawable/apple_icon"
            android:background="@color/white"/>
    </LinearLayout>

</LinearLayout>
