<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_button"
        android:backgroundTint="@color/white" />
    <TextView
        android:layout_marginTop="220dp"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Settings"
        android:textSize="24sp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_marginBottom="24dp"
        />

    <Button
        android:id="@+id/privacySettingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_privacy"
        android:drawableEnd="@drawable/right_arrow"
        android:text="@string/privacy_settings" />

    <Button
        android:id="@+id/feedbackFormButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_form"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/feedback_icon"
        android:drawableEnd="@drawable/right_arrow"
        android:drawableTint="@color/black"
        android:background="@android:color/transparent" />

    <Button
        android:id="@+id/userAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_account"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/small_icon_user"
        android:drawableEnd="@drawable/right_arrow"
        android:drawableTint="@color/black"
        android:background="@android:color/transparent" />


</LinearLayout>
