<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_gravity="start"
        android:layout_marginStart="1dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/back_button"
        app:srcCompat="@drawable/back_button" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="324dp"
        android:layout_height="161dp"
        android:contentDescription="@string/logo"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/main_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="24dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/primaryButtonColor"
            android:hint="@string/your_email_address_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="@color/grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_hint"
            android:layout_marginTop="24dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your Password"
            android:textColorHint="@color/grey"
            android:background="@color/primaryButtonColor"
            android:inputType="textPassword"
            android:layout_marginBottom="24dp"
            android:padding="10dp"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="#917EB0"
            android:text="Login" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">
    <View
        android:id="@+id/divider"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:layout_weight="0.3"
        android:background="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="0.3"
            android:textAlignment="center"
            android:text="or"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    <View
        android:id="@+id/divider2"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:layout_weight="0.3"
        android:background="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="24dp">

        <ImageButton
            android:id="@+id/GoogleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:background="@color/white"
            app:srcCompat="@drawable/google_icon" />

        <ImageButton
            android:id="@+id/FbButton"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_marginRight="50dp"
            android:background="@color/white"
            app:srcCompat="@drawable/fb_icon" />

    <ImageButton
        android:id="@+id/AppleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/apple_icon"
        android:background="@color/white"/>
    </LinearLayout>



</LinearLayout>
